# documentary-storyboard-archival-finder

./: .gitignore  CLAUDE.md  LICENSE  PROJECT-DEVELOPMENT-PHASE-TRACKING.md  PROJECT-detail.md  README.md  SECOND-KNOWLEDGE-BRAIN.md  pyproject.toml
docs/: CONTRIBUTING.md  archive-directory.md  cross-cluster-integration.md
skills/: main.md  sub-archival-finder.md  sub-evaluation-framework-selector.md  sub-requirements-gatherer.md  sub-scoring-engine.md  sub-storyboard-builder.md
tests/: conftest.py  test-scenarios.md  test_archive_client.py  test_knowledge_updater.py  test_rights_classifier.py  test_scenarios.py  test_scoring_engine.py  test_skills.py
tools/: archive_client.py  knowledge_updater.py  rights_classifier.py  scoring_engine.py
